--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": false,
-        "outDir": "built",
-        "rootDir": ".",
-        "sourceMap": false
+        "sourceMap": true
     },
     "exclude": [
         "node_modules"
