with cube resonding to average amplitude of audio

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,11 +11,15 @@ http {
         root /;
     
         location / {
-            root static;
+            root dist;
         }
         
         location /scripts/ {
             alias dist/;
+        }
+
+        location /audio/ {
+            alias audio/;
         }
     }
 }
