--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "typescript": "^1.6.2"
   },
   "devDependencies": {
+    "css-loader": "^0.23.0",
     "gulp-shell": "^0.5.1",
     "gulp-typescript": "^2.9.2",
     "gulp-watch": "^4.3.5",
     "gulp-webpack": "^1.5.0",
     "jquery": "^2.1.4",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "style-loader": "^0.13.0",
     "ts-loader": "^0.7.2",
     "tsd": "^0.6.5",
     "webpack": "^1.12.9",
