--- a/package.json
+++ b/package.json
@@ -12,36 +12,38 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danjres/3d.git"
+    "url": "git+https://github.com/cstoll/3DAudio"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/danjres/3d/issues"
+    "url": "https://github.com/cstolli/3DAudio/issues"
   },
-  "homepage": "https://github.com/danjres/3d#readme",
+  "homepage": "https://github.com/cstolli/3DAudio/blob/master/README.md",
   "dependencies": {
+    "jquery": "^3.6.1",
     "lodash": "^4.17.4",
     "n3d-threejs": "^76.0.0",
     "react": "^0.14.3",
-    "three": "^0.86.0",
-    "ts-loader": "^2.2.0",
-    "tslint": "^5.4.3",
-    "typescript": "^2.3.4"
+    "three": "^0.144.0",
+    "three-text-geometry": "^0.0.0",
+    "ts-loader": "^9.3.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
-    "css-loader": "^0.23.1",
-    "file-loader": "github:webpack-contrib/file-loader",
-    "jquery": "^2.1.4",
-    "json-loader": "^0.5.4",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.3",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^0.7.2",
-    "tsd": "^0.6.5",
-    "tslint-config-standard": "^6.0.1",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.0"
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^4.4.2",
+    "tsd": "^0.23.0",
+    "tslint-config-standard": "^9.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
